# C-Web-Server

./: .gitignore  CMakeLists.txt
src/: http.c  http.h  server.c
tests/: CMakeLists.txt  cache.test.c  http.test.c  llist.test.c
